# PVSO

./: .gitignore  pyproject.toml  requirements.txt
ximea/: Pipfile  camera_test.py  camera_zad_1.py  main.py
ximea/Zadanie_1/: camera_zad_1.py
ximea/Zadanie_2/: camera_calibration.py  camera_parameters.yaml  camera_zad_2.py  hough_transform.py
ximea/Zadanie_3/: LoG.py  camera_edges.py  edges.py  histogramRGB.py  opencv-edges.py  tests.py
ximea/Zadanie_4/: clusterization  output.pcd  preview_o3d.py  ransac.py
ximea/Zadanie_4/results/: Rf17_ransac_noise.pcd  output_ransac_noise.pcd
