[tool.poetry]
name = "pvso"
version = "0.1.0"
description = "PVSO STU Tasks"
authors = ["xzlobin <xzlobin@stuba.sk>"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.4"
opencv-python = "^4.9.0.80"
PyYAML = "^6.0.1"
uuid = "^1.30"
ximea-py = "^4.27"
numba = "^0.59.0"
matplotlib = "^3.8.3"
pyqt6 = "^6.6.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
